# dominion-card-generator-cli

./: .gitignore  CMakeLists.txt  README.md  run.sh
freetype/bil/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  freetype-config-version.cmake  freetype2.pc
glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  GLFW.project  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw/src/Debug/: glfw3.lib
glfw/src/glfw.dir/Debug/: glfw3.lib.recipe
glfw/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+5 more)
glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
include/glm/: Makefile  cmake_install.cmake
src/: Image.cpp  Image.h  Log.cpp  Log.h  OSspecifics.cpp  OSspecifics.h  Resources.cpp  Resources.h  States.cpp  States.h  Text.cpp  Text.h  handler.cpp  handler.h  main.cpp  main.h  utils.cpp  utils.h
src/.codelite/: Bang.session  src.session
